--- a/less/site.less
+++ b/less/site.less
@@ -107,3 +107,11 @@
 .list-checkbox {
   margin-bottom: 20px;
 }
+
+.form-control {
+  box-shadow: none;
+
+  &:focus {
+    box-shadow: none;
+  }
+}
