Updated registration form

--- a/less/site.less
+++ b/less/site.less
@@ -116,6 +116,10 @@
   }
 }
 
-.nav-pills > li > a {
-  border: 1px solid @blue;
+.nav-pills {
+  margin-bottom: 15px;
+
+  > li > a {
+    border: 1px solid @blue;
+  }
 }
