--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -656,6 +656,9 @@
 .form-control:focus {
   box-shadow: none;
 }
+.nav-pills {
+  margin-bottom: 15px;
+}
 .nav-pills > li > a {
   border: 1px solid #148bff;
 }
