Updated required fields styles

--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -123,6 +123,7 @@
 .required label:after {
   color: #ff374f;
   content: "*";
+  font-weight: normal;
   margin-left: 2px;
   position: absolute;
 }
