--- a/less/type.less
+++ b/less/type.less
@@ -123,6 +123,7 @@
     &:after {
       color: @red;
       content: "*";
+      font-weight: normal;
       margin-left: 2px;
       position: absolute;
     }
