--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -661,7 +661,8 @@
 .form-control {
   box-shadow: none;
 }
-.form-control:focus {
+.form-control:focus,
+.has-error .form-control:focus {
   box-shadow: none;
 }
 .nav-pills {
