--- a/less/site.less
+++ b/less/site.less
@@ -128,3 +128,19 @@
 .tab-content {
   margin-bottom: 15px;
 }
+
+.spinner {
+  background-image: url('../img/spinner.gif');
+  background-repeat: none;
+  background-size: 1.4em auto;
+  display: inline-block;
+  height: 1.4em;
+  margin-left: .5em;
+  vertical-align: middle;
+  visibility: hidden;
+  width: 1.4em;
+
+  &.active {
+    visibility: visible;
+  }
+}
