--- a/less/site.less
+++ b/less/site.less
@@ -111,6 +111,10 @@
 .form-control {
   box-shadow: none;
 
+  textarea& {
+    resize: vertical;
+  }
+
   &:focus,
   .has-error &:focus {
     box-shadow: none;
