--- a/less/site.less
+++ b/less/site.less
@@ -124,8 +124,18 @@
 .nav-pills {
   margin-bottom: 15px;
 
+  > li {
+    display: block;
+    float: left;
+    width: 50%;
+  }
+
   > li > a {
     border: 1px solid @blue;
+  }
+
+  > li + li {
+    margin-left: 0;
   }
 }
 
