--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -699,6 +699,11 @@ textarea.form-control {
 .spinner.active {
   visibility: visible;
 }
+dl em {
+  font-style: normal;
+  font-weight: 500;
+  text-decoration: underline;
+}
 /* Paths */
 /* Colors */
 /*# sourceMappingURL=style.css.map */
