--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -127,6 +127,11 @@
   margin-left: 2px;
   position: absolute;
 }
+em {
+  font-style: normal;
+  font-weight: 500;
+  text-decoration: underline;
+}
 .btn {
   border-radius: 20px;
   border: 0;
@@ -698,11 +703,6 @@ textarea.form-control {
 }
 .spinner.active {
   visibility: visible;
-}
-dl em {
-  font-style: normal;
-  font-weight: 500;
-  text-decoration: underline;
 }
 /* Paths */
 /* Colors */
