Updated email template

--- a/templates/email.html
+++ b/templates/email.html
@@ -106,9 +106,12 @@
                     <tr>
                       <td style="font-family: sans-serif; font-size: 14px; vertical-align: top;" valign="top">
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Bună Andrei,</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Felicitări! Solicitarea de înscriere a fost trimisă cu succes.</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">În scurt timp vei fi contactat de echipa noastră pentru a stabili exact în ce secție de votare vei fi reprezentant/delegat al USR.</p>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant<br>Dacă nu sunt atribuit ca reprezentant, sunt de acord să fiu și delegat<br>Confirm pe propria răspundere că nu sunt candidat sau rudă de până la gradul 2 a unui candidat</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Vreau să fiu:</b><br>Reprezentant</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Reprezentantul</b> are <u>obligaţia legală de a participa</u> la activitatea biroului electoral al secţiei de votare din care face parte (în conformitate cu dispoziţiile art. 98 din Legea nr. 208/2015). <u>Trebuie</u> să fie prezent în secţia de votare atât în <u>preziua alegerilor</u> (10 decembrie 2016) la ora 18:00, cât şi în <u>ziua alegerilor</u> (11 decembrie 2016) de la ora 6:00 până la momentul întocmirii proceselor-verbale de constatare a rezultatelor votării şi a dosarelor cu rezultatele votării din secţia respectivă (aprox. ora 1-2 noaptea).</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Potrivit dispoziţiilor H.G. nr. 637/2016, va primi din partea statului o <u>indemnizaţie de 65 de lei</u> pentru fiecare zi de activitate, dar nu mai mult de 3 zile (prin zi de activitate se înţelege munca desfăşurată pe parcursul unei zile calendaristice, indiferent de numărul de ore prestate, dar nu mai puţin de 6 ore pe zi).</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Dacă nu sunt atribuit ca reprezentant, sunt de acord să fiu și delegat</b></p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Confirm pe propria răspundere că nu sunt candidat sau rudă de până la gradul 2 a unui candidat</b></p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Prenume:</b><br>Andrei</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Nume de familie:</b><br>Popescu</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;"><b>Email:</b><br>andrei.popescu@usr.ro</p>
@@ -138,7 +141,7 @@
                             </tr>
                           </tbody>
                         </table>
-                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Termenul limită de înscriere a reprezenților este pe 23 noiembrie, iar al delegaților pe 2 decembrie.</p>
+                        <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Termenul limită de înscriere a reprezentanților este pe 23 noiembrie, iar al delegaților pe 2 decembrie.</p>
                         <p style="font-family: sans-serif; font-size: 14px; font-weight: normal; margin: 0; Margin-bottom: 15px;">Îți mulțumim pentru înscriere!</p>
                       </td>
                     </tr>
