--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -132,6 +132,9 @@ em {
   font-weight: 500;
   text-decoration: underline;
 }
+mark {
+  background-color: #d4f0fd;
+}
 .btn {
   border-radius: 20px;
   border: 0;
