--- a/less/site.less
+++ b/less/site.less
@@ -1,9 +1,15 @@
 .jumbotron-primary {
   margin-bottom: 30px;
 
+  @media (min-width: 992px) and (max-width: 1199px) {
+    .panel {
+      margin-top: 20px;
+    }
+  }
+
   @media (min-width: 1200px) {
     .panel {
-      margin-top: 30px;
+      margin-top: 60px;
     }
   }
 }
