--- a/less/variables.less
+++ b/less/variables.less
@@ -4,9 +4,9 @@
 
 /* Colors */
 
-@blue: #148bff;
-@blue-darker: #0082ff;
-@blue-light: #7fc1ff;
-@blue-lighter: #d4f0fd;
+@blue: #00a1e4;
+@blue-darker: #0089c2;
+@blue-light: #80d0f2;
+@blue-lighter: #ccecfa;
 
-@red: #ff374f;
+@red: #eb0000;
