--- a/less/jumbotron.less
+++ b/less/jumbotron.less
@@ -2,6 +2,10 @@
   padding-bottom: 30px;
   padding-top: 30px;
 
+  h1 {
+    font-size: 24px;
+  }
+
   p {
     font-weight: inherit;
   }
@@ -13,10 +17,6 @@
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-
-  h1 {
-    color: #fff;
-  }
 
   .label {
     color: #fff;
