--- a/less/panels.less
+++ b/less/panels.less
@@ -3,6 +3,11 @@
   box-shadow: 0 6px 12px rgba(0, 0, 0, .175);
 }
 
+.panel-heading {
+  border-bottom: 0;
+  margin-bottom: -20px;
+}
+
 .panel-footer {
   border-top: 0;
   margin-top: -20px;
