--- a/less/site.less
+++ b/less/site.less
@@ -1,3 +1,74 @@
+.navbar {
+  border: 0;
+}
+
+.navbar-toggle {
+  margin-left: 15px;
+}
+
+.navbar-default {
+  .navbar-brand {
+    background-color: @blue;
+
+    &:hover,
+    &:focus {
+      background-color: @blue;
+    }
+  }
+
+  .navbar-toggle {
+    background-color: @blue;
+    border-color: #008fcb;
+
+    .icon-bar {
+      background-color: #fff;
+    }
+
+    &:hover,
+    &:focus {
+      background-color: #007db1;
+      border-color: #00648b;
+    }
+  }
+}
+
+.navbar-brand {
+  padding-bottom: 10px;
+  padding-top: 10px;
+}
+
+.navbar-brand > img {
+  max-height: 60px;
+}
+
+.navbar-left {
+  margin-bottom: 0;
+}
+
+.navbar-right {
+  margin-top: 0;
+}
+
+.navbar-btn {
+  margin-bottom: 20px;
+  margin-top: 20px;
+}
+
+@media (min-width: 768px) {
+  .navbar-right {
+    margin-right: 15px;
+  }
+}
+
+.dropdown-menu {
+  border: 0;
+  border-radius: 0;
+
+  > li > a {
+    padding: 10px 20px;
+  }
+}
+
 .jumbotron-primary {
   margin-bottom: 30px;
 
@@ -9,7 +80,7 @@
 
   @media (min-width: 1200px) {
     .panel {
-      margin-top: 55px;
+      margin-top: 30px;
     }
   }
 }
