--- a/less/site.less
+++ b/less/site.less
@@ -73,8 +73,12 @@
   margin-bottom: 30px;
 
   @media (min-width: 992px) and (max-width: 1199px) {
+    .maps {
+      margin-top: 45px;
+    }
+
     .panel {
-      margin-top: 10px;
+      margin-top: 20px;
     }
   }
 
