--- a/less/site.less
+++ b/less/site.less
@@ -2,6 +2,12 @@
   border: 0;
 }
 
+.navbar-static-top {
+  left: 0;
+  position: absolute;
+  right: 0;
+}
+
 .navbar-toggle {
   margin-left: 15px;
 }
@@ -33,6 +39,7 @@
 }
 
 .navbar-brand {
+  margin-right: 15px;
   padding-bottom: 10px;
   padding-top: 10px;
 }
@@ -61,8 +68,9 @@
 }
 
 .dropdown-menu {
-  border: 0;
   border-radius: 0;
+  border: 0;
+  top: 60px;
 
   > li > a {
     padding: 10px 20px;
