Updated jumbotron panel

--- a/less/site.less
+++ b/less/site.less
@@ -99,6 +99,22 @@
 .jumbotron-primary {
   margin-bottom: 30px;
 
+  .maps {
+    .label {
+      color: #fff;
+    }
+  }
+
+  .panel {
+    text-align: center;
+  }
+
+  .statistic {
+    display: block;
+    margin-bottom: 15px;
+    margin-top: 20px;
+  }
+
   @media (min-width: 992px) and (max-width: 1199px) {
     .maps {
       margin-top: 45px;
@@ -111,7 +127,7 @@
 
   @media (min-width: 1200px) {
     .panel {
-      margin-top: 25px;
+      margin-top: 35px;
     }
   }
 }
@@ -186,14 +202,14 @@
 .statistics {
   margin-bottom: 5px;
   text-align: center;
-}
 
-.statistic-primary,
-.statistic-secondary {
-  width: 9em;
+  .statistic-primary,
+  .statistic-secondary {
+    width: 9em;
 
-  @media (min-width: 768px) {
-    width: 15em;
+    @media (min-width: 768px) {
+      width: 15em;
+    }
   }
 }
 
