--- a/less/type.less
+++ b/less/type.less
@@ -48,6 +48,12 @@
     line-height: 1;
   }
 
+  .text.value {
+    font-size: 36px;
+    font-weight: 500;
+    text-transform: uppercase;
+  }
+
   @media (min-width: 768px) {
     .value {
       font-size: 63px;
