--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -71,6 +71,11 @@
   font-weight: bold;
   line-height: 1;
 }
+.statistic .text.value {
+  font-size: 36px;
+  font-weight: 500;
+  text-transform: uppercase;
+}
 @media (min-width: 768px) {
   .statistic .value {
     font-size: 63px;
@@ -165,9 +170,6 @@ mark {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.jumbotron-primary .label {
-  color: #fff;
 }
 .panel {
   border: 0;
@@ -632,6 +634,17 @@ mark {
 .jumbotron-primary {
   margin-bottom: 30px;
 }
+.jumbotron-primary .maps .label {
+  color: #fff;
+}
+.jumbotron-primary .panel {
+  text-align: center;
+}
+.jumbotron-primary .statistic {
+  display: block;
+  margin-bottom: 15px;
+  margin-top: 20px;
+}
 @media (min-width: 992px) and (max-width: 1199px) {
   .jumbotron-primary .maps {
     margin-top: 45px;
@@ -642,7 +655,7 @@ mark {
 }
 @media (min-width: 1200px) {
   .jumbotron-primary .panel {
-    margin-top: 25px;
+    margin-top: 35px;
   }
 }
 @media (min-width: 992px) {
@@ -719,13 +732,13 @@ mark {
   margin-bottom: 5px;
   text-align: center;
 }
-.statistic-primary,
-.statistic-secondary {
+.statistics .statistic-primary,
+.statistics .statistic-secondary {
   width: 9em;
 }
 @media (min-width: 768px) {
-  .statistic-primary,
-  .statistic-secondary {
+  .statistics .statistic-primary,
+  .statistics .statistic-secondary {
     width: 15em;
   }
 }
