--- a/less/site.less
+++ b/less/site.less
@@ -227,10 +227,6 @@
   }
 }
 
-.list-checkbox {
-  margin-bottom: 20px;
-}
-
 .form-control {
   box-shadow: none;
 
@@ -244,26 +240,8 @@
   }
 }
 
-.nav-pills {
-  margin-bottom: 15px;
-
-  > li {
-    display: block;
-    float: left;
-    width: 50%;
-  }
-
-  > li > a {
-    border: 1px solid @blue;
-  }
-
-  > li + li {
-    margin-left: 0;
-  }
-}
-
-.tab-content {
-  margin-bottom: 15px;
+.form-delegat {
+  margin-bottom: 20px;
 }
 
 .spinner {
