--- a/assets/app/css/style.css
+++ b/assets/app/css/style.css
@@ -513,7 +513,7 @@ mark {
   border-top: 0;
   box-shadow: none;
 }
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .navbar-nav > li > a {
     text-align: center;
   }
@@ -525,8 +525,13 @@ mark {
     margin-right: -1em;
   }
 }
+.container > .navbar-header {
+  margin-left: 0;
+  margin-right: 0;
+}
 .navbar-toggle {
   margin-left: 15px;
+  margin-right: 0;
 }
 .navbar-default .navbar-brand {
   background-color: #00a1e4;
@@ -551,6 +556,9 @@ mark {
   margin-right: 15px;
   padding-bottom: 10px;
   padding-top: 10px;
+}
+.navbar > .container .navbar-brand {
+  margin-left: 0;
 }
 .navbar-brand > img {
   max-height: 60px;
